<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/amount_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_tv"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/amount_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/amount_et"
        android:inputType="number"
        android:textColor="#808080" />

    <TextView
        android:id="@+id/pax_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pax_tv"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/pax_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pax_et"
        android:inputType="number"
        android:textColor="#808080" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/serviceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:textOff="@string/service_off"
            android:textOn="@string/service_on"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/gstButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:textOff="@string/gst_off"
            android:textOn="@string/gst_on"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/discount_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount_tv"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/discount_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/discount_et"
        android:inputType="number"
        android:textColor="#808080" />

    <RadioGroup
        android:id="@+id/payment_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/cash_rb"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cash_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/paynow_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payNow"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/splitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/split"
            android:textColor="#FFD700"
            android:textSize="18sp" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textColor="#FFD700"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/total_bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalBill"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/individual_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EachPay"
        android:textColor="#000000"
        android:textSize="24sp" />

</LinearLayout>
